welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:13: error: value tolnt is not a member of String
for(i<- 0 to getMondeLargeur-2){avance();litMessage().tolnt ;T2(i)=litMessage}
                                                      ^Array2:13: error: type mismatch;
 found   : String
 required: Int
for(i<- 0 to getMondeLargeur-2){avance();litMessage().tolnt ;T2(i)=litMessage}
                                                                   ^